[package]
name = "percolator"
version = "0.1.0"
authors = ["Ryan Leung <rleungx@gmail.com>", "Runji Wang <wangrunji0408@163.com>"]
edition = "2021"

[dependencies]
futures = "0.3"
log = "0.4"
thiserror = "1"
madsim = { git = "https://github.com/madsys-dev/madsim", rev = "42e81fa", features = ["sim"] }
serde = { version = "1.0", features = ["derive"] }
